--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 scipy==1.5.2
-matplotlib==3.3.4
-tensorflow==1.15.0
-keras==2.3.1
+matplotlib~=3.4.3
+tensorflow~=2.6.0
+keras~=2.6.0
 psnr-hvsm==0.1.0
 opencv-python
 scikit-image
