Timor: updated opendvc work

--- a/Dockerfile-tf1-12
+++ b/Dockerfile-tf1-12
@@ -1,15 +1,14 @@
-FROM python:3.8
+FROM python:3.6
 
 RUN apt-get update
 RUN apt-get install ffmpeg libsm6 libxext6  -y
 
 RUN pip3 install opencv-python
-RUN pip3 install tensorflow
-RUN pip3 install tensorflow-probability
+RUN pip3 install tensorflow==1.12
+RUN pip3 install tensorflow-probability==0.5.0
 RUN pip3 install tensorflow_addons
 RUN pip3 install PyWavelets
 RUN pip3 install psnr-hvsm
 RUN pip3 install imageio
 ENV PYTHONPATH /workspace/tensorflow_wavelets/src
 RUN pip install numpy scipy
-RUN pip install tensorflow-compression
