--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ Development/output/*
 Development/OpenDVC/OpenDVC_model/*
 *.bin
 *.npy
+checkpoint
+please_save.somthing.data-00000-of-00001
+.DS_Store
