--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,9 +17,12 @@
 	"extensions": [
 		"ms-python.python",
 		"donjayamanne.python-environment-manager",
-		"yzhang.markdown-all-in-one"
+		"yzhang.markdown-all-in-one",
+		"ms-toolsai.jupyter"
+		
 	],
-	
-	"runArgs": ["--privileged=true"]
+
+
+	"runArgs": ["--privileged=true", "-v", "/mnt/:/mnt/"]
 
 }
