--- a/Dockerfile_tf2_gpu
+++ b/Dockerfile_tf2_gpu
@@ -15,4 +15,14 @@ RUN pip3 install numpy scipy
 RUN pip3 install tensorflow-compression
 RUN pip3 install matplotlib
 RUN pip3 install ipykernel
+
 RUN useradd -ms /bin/bash ubu-admin
+
+
+RUN apt-get install git -y
+RUN pip3 install jupyter
+RUN pip3 install jupyterlab
+RUN pip3 install notebook
+
+EXPOSE 8888
+# CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--ip=0.0.0.0"]
